--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactCrudDemo",
+  "name": "EmployeeManagementSystem",
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
@@ -15,6 +15,7 @@
     "awesome-typescript-loader": "3.2.1",
     "bootstrap": "3.3.7",
     "css-loader": "0.28.4",
+    "eslint": "^9.9.0",
     "event-source-polyfill": "0.0.9",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
